objects/icBase__Object__c.object
<CustomObject>
    <description>Object information stored against a project. This may include standard and custom objects.</description>
    <fields>
        <fullName>icBase__Auto_Number_Format__c</fullName>
        <label>Auto Number Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icBase__Available_in_customer_portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in customer portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>icBase__Deployment_Status__c</fullName>
        <label>Deployment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Deployed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>icBase__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>icBase__Enable_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Enable_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Package__c</fullName>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icBase__Plural_Label__c</fullName>
        <label>Plural Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icBase__Project__c</fullName>
        <label>Project</label>
        <referenceTo>icBase__Project2__c</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>icBase__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icBase__Standard_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Starting_Number__c</fullName>
        <label>Starting Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>icBase__Starts_with_a_vowel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starts with a vowel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Track_Field_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Field History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__sObject_API_Name__c</fullName>
        <label>sObject API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object</label>
    <listViews>
        <fullName>icBase__All</fullName>
        <columns>NAME</columns>
        <columns>icBase__Project__c</columns>
        <columns>icBase__Standard_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>icBase__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>